--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <p> Hello everyone! My name is Delaney Hogg and I am so excited for this semester, even with the <Strong> pandemic </Strong>and other things going on. I recently graduated from East Carolina University with a degree in Business Marketing and a certificate in Professional Selling. I am the third generation in my family to attend East Carolina but my step mom is a Hokie! </p>
         <img alt= " a picture of myself" src="East-Carolina-University-Football-NC-Living.jpg" class="responsive" alt="Sweet cat"/>  
     
-            <p> I am excited for this class because I already have some experience in social media and content management. I think my experiences with helping to run a website will help me find relatable experiences that could help my fellow classmates. </p>
+            <strong>   <header> Fall 2020 <header> </strong> 
+            <p> I am excited for this class because I already have some experience in social media and content management. I think my experiences with helping to run a website will help me find relatable experiences that could help my fellow classmates. I am currently serving as the Marketing and Social Media Graduate Assistant with Virginia Tech Rec Sports and I think this will be very relevant to what we learn this semester because I frequently work with social media and our website. </p>
 
        </main> 
         <aside> </aside>
